[package]
name = "wow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
mem = { git = "https://github.com/steele123/mem-rs" }
user32-sys = "0.2.0"

[dependencies.winapi]
features = [
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "synchapi",
    "consoleapi",
    "winuser",
]

[[example]]
name = "wow_rs_dll"
crate-type = ["cdylib"]
